Fixe the jumping scrollbar, #1

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,3 +78,5 @@ img {
   width: 100%;
   height: auto;
 }
+
+html { margin-left: calc(100vw - 100%); }
